Fix header on mobile (align center social icons & cart)

--- a/partials/header/header.css
+++ b/partials/header/header.css
@@ -13,7 +13,7 @@
 }
 
 .social-icon__list {
-  padding-left: 0;
+  padding-left: 15px;
   margin-bottom: 0;
   list-style-type: none;
 
